After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 712247 - Wayland event handling fixes
Wayland event handling fixes
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-11-13 20:47 UTC by Rui Matos
Modified: 2013-11-13 20:56 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
display: Without a grab op let events go through clutter too (919 bytes, patch)
2013-11-13 20:47 UTC, Rui Matos
committed Details | Review
wayland: Update internal wayland state unconditionally (5.63 KB, patch)
2013-11-13 20:47 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2013-11-13 20:47:29 UTC
Just a couple of fixes for things that broke recently on the wayland
branch.
Comment 1 Rui Matos 2013-11-13 20:47:32 UTC
Created attachment 259751 [details] [review]
display: Without a grab op let events go through clutter too

We want events to reach clutter no only when there a compositor modal
grab but also when no grab op is in effect.
Comment 2 Rui Matos 2013-11-13 20:47:36 UTC
Created attachment 259752 [details] [review]
wayland: Update internal wayland state unconditionally

Things like idle times and the cursor position need to be updated even
if there's a mutter grab in effect.
Comment 3 Jasper St. Pierre (not reading bugmail) 2013-11-13 20:48:55 UTC
Review of attachment 259752 [details] [review]:

Yes.
Comment 4 Jasper St. Pierre (not reading bugmail) 2013-11-13 20:49:09 UTC
Review of attachment 259751 [details] [review]:

Yes.
Comment 5 Rui Matos 2013-11-13 20:56:48 UTC
Attachment 259751 [details] pushed as ae44bff - display: Without a grab op let events go through clutter too
Attachment 259752 [details] pushed as 63b9110 - wayland: Update internal wayland state unconditionally